force-app/main/default/objects/InheritedFieldValue__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Turns the function on and off</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>