force-app/main/default/objects/InheritedFieldValue__mdt/fields/RelationshipField__c.field-meta.xml
<CustomField>
    <fullName>RelationshipField__c</fullName>
    <inlineHelpText>Lockup to field which defines the relation between Source and Target Object. 
Hint: As the you can use a relation like &quot;ProjectName__r.BillingViaCompany__c&quot; it is possible to have a relation more then one level deep.</inlineHelpText>
    <label>RelationshipField</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipLabel>Inherited field values (RelationshipField)</relationshipLabel>
    <relationshipName>FieldValueInheritances1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>