force-app/main/default/objects/InheritedFieldValue__mdt/fields/SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SourceObject__c</fullName>
    <label>SourceObject</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipName>FieldValueInheritances1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>