force-app/main/default/objects/InheritedFieldValue__mdt/fields/SourceQuery__c.field-meta.xml
<CustomField>
    <fullName>SourceQuery__c</fullName>
    <inlineHelpText>API Name to the referenced Field. 
Hint: As you can use a also a reference like &quot;ProjectName__r.BillingViaCompany__c&quot; it is possible to achieve a relation more then one level deep.</inlineHelpText>
    <label>SourceQuery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>