force-app/main/default/objects/InheritedFieldValue__mdt/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Execute the function on update of the Child record.</inlineHelpText>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>