force-app/main/default/objects/InheritedFieldValue__mdt/fields/UserValuesWinsOnInsert__c.field-meta.xml
<CustomField>
    <fullName>UserValuesWinsOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed as example for Terms of Payment on Project, so if the user does not provide any value its taken (inherited) from the account. Usually it does not make sense to have this flag and Update turned on both.</description>
    <inlineHelpText>If the user provides a value in the user interface when creating a new record, the value will not be inherited from the parent record.</inlineHelpText>
    <label>User values wins (on insert)</label>
    <type>Checkbox</type>
</CustomField>